--- a/index.html
+++ b/index.html
@@ -397,12 +397,6 @@
                                     <td class="cell100 column1">9:30 PM - 10:30 PM</td>
                                     <td class="cell100 column2">Mini Event 1 - TBA</td>
                                  </tr>
-                                 <tr class="row100 body">
-                                    <td class="cell100 column1">11:00 PM - 12:00 PM</td>
-                                    <td class="cell100 column2">
-                                       Fun Event 1
-                                    </td>
-                                 </tr>
                               </tbody>
                            </table>
                         </div>
@@ -424,30 +418,20 @@
                            <table class="schedule1" id="table-saturday" style="overflow-y: hidden; overflow-x: hidden">
                               <tbody>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">6:00 AM - 12:00 PM</td>
-                                    <td class="cell100 column2">Check In</td>
+                                    <td class="cell100 column1">10:00 AM - 11:00 AM</td>
+                                    <td class="cell100 column2">Mini Event 2 - TBA</td>
                                  </tr>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">7:00 AM - 7:30 AM</td>
-                                    <td class="cell100 column2">Opening Ceremony</td>
+                                    <td class="cell100 column1">2:00 PM - 3:00 PM</td>
+                                    <td class="cell100 column2">Workshop 1 - TBA</td>
                                  </tr>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">7:30 AM</td>
-                                    <td class="cell100 column2">Hacking Begins</td>
+                                    <td class="cell100 column1">5:00 PM - 6:00 PM</td>
+                                    <td class="cell100 column2">Workshop 2 - TBA</td>
                                  </tr>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">8:00 AM - 9:00 AM</td>
-                                    <td class="cell100 column2">Bootcamp Orientation</td>
-                                 </tr>
-                                 <tr class="row100 body">
-                                    <td class="cell100 column1">10:00 AM - 10:30 AM</td>
-                                    <td class="cell100 column2">Mini Event 1</td>
-                                 </tr>
-                                 <tr class="row100 body">
-                                    <td class="cell100 column1">11:00 AM - 12:00 PM</td>
-                                    <td class="cell100 column2">
-                                       Workshop 1
-                                    </td>
+                                    <td class="cell100 column1">8:00 PM - 9:00 PM</td>
+                                    <td class="cell100 column2">Fun Event 2 - TBA</td>
                                  </tr>
                               </tbody>
                            </table>
