--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                     <h2 class="text-info" style="color:#001d75">Our Sponsors</h2>
                 </div>
                 <div class="align-items-center">
-                      <img src="https://docs.google.com/drawings/d/e/2PACX-1vQEULbPbtZitqNVD9saQbHYE0HB8qSz2Vz25jH6hBYGF_TIUJUcXcR4dSf03Hbu82hCO0ohumzUtD8-/pub?w=915&h=523" style = "width: 100%">
+                      <img src="assets/img/Sponsors.svg" style = "width: 100%">
                 </div>
             </div>
             
