best illinois team

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                   </div>
 
                   <div class="border-2 p-5 ">
-                      <h3 class="font-sans text-2xl" id = "boxtext">BEST SOLO</h3>
+                      <h3 class="font-sans text-2xl" id = "boxtext">BEST ILLINOIS TEAM</h3>
                       <p class="font-serif text-xl mb-5" id = "boxtext">TBA</p>
                   </div>
                   <div class="border-2 p-5 ">
