--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta name="google-site-verification" content="Fl0EDleOfABfuuF8c3TNZcD5OMxEmtzDq9Y0bVE5qYI" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-	<title>Home - Brand</title>
+	<title>Home</title>
 
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
