--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
             <div class="text">
                 <h1 class="display-3"><img src="assets/img/HackVH%20logo.svg" style="width: 150px;margin-bottom:10px">HackVH</h1>
-                <p>The premier virtual high school hackathon based in the Chicagoland area.</p><button class="btn btn-outline-light btn-lg" type="button"
+                <p>The premier virtual high school hackathon based in the Chicagoland area.<br/>April 16th - 18th, 2021</p><button class="btn btn-outline-light btn-lg" type="button"
                 onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdpF_yqFlaCrPCvDkOzZkSbwc1gY4oGTm-p00Zim-s2jJ6flw/viewform?usp=sf_link','_blank')" >Register</button>
 
                 <script>
