--- a/index.html
+++ b/index.html
@@ -507,6 +507,7 @@
                   <div class="border-2 p-5 ">
                       <h3 class="font-sans text-2xl" id = "boxtext">FREE FOR EVERYONE</h3>
                       <p class="font-serif text-xl mb-5" id = "boxtext">Free Business Tier access to EchoAR during the event.</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">Free 6 month repl.it Hacker Plan subscription.</p>
                       <p class="font-serif text-xl mb-5" id = "boxtext"> Access to Wolfram|One for thirty days. Wolfram|One includes both Desktop and Cloud access, full access to the Wolfram Language and Knowledgebase, FreeCDF Deployment, 5000 Wolfram|Alpha API calls, 5000 Cloud Credits, 2 installations per user and 2 GB of Cloud Storage.</p>
                   </div>
                 </div>
