--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                           <div class="card-body" style="color:#fff">
-                            We encourage students of all experience levels to attend. We will have workshops led by industry professionals for you to experiment with new technologies. Why not get started on your project?
+                            We encourage students of all experience levels to attend. We will have workshops led by industry professionals for you to experiment with new technologies. Why not try getting started on your first project?
                           </div>
                         </div>
                       </div>
