--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                                  </tr>
                                  <tr class="row100 body">
                                     <td class="cell100 column1">8:00 PM - 9:00 PM</td>
-                                    <td class="cell100 column2">Bootcamp Orientation</td>
+                                    <td class="cell100 column2">Intro to Github</td>
                                  </tr>
                                  <tr class="row100 body">
                                     <td class="cell100 column1">9:30 PM - 10:30 PM</td>
@@ -454,11 +454,11 @@
                            <table class="schedule1" id="table-sunday" style="overflow-y: hidden; overflow-x: hidden">
                               <tbody>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">10:00 AM</td>
+                                    <td class="cell100 column1">9:00 AM</td>
                                     <td class="cell100 column2">Hacking Stops!</td>
                                  </tr>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">11:00 AM</td>
+                                    <td class="cell100 column1">10:00 - 11:00 AM</td>
                                     <td class="cell100 column2">Submissions Due</td>
                                  </tr>
                                  <tr class="row100 body">
