--- a/index.html
+++ b/index.html
@@ -458,11 +458,11 @@
                                     <td class="cell100 column2">Hacking Stops!</td>
                                  </tr>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">10:00 - 11:00 AM</td>
-                                    <td class="cell100 column2">Submissions Due</td>
+                                    <td class="cell100 column1">10:00 - 10:30 AM</td>
+                                    <td class="cell100 column2">Finalize Submissions</td>
                                  </tr>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">5:00 PM - 5:30 PM</td>
+                                    <td class="cell100 column1">4:00 PM - 4:30 PM</td>
                                     <td class="cell100 column2">Closing Ceremony</td>
                                  </tr>
                               </tbody>
