--- a/index.html
+++ b/index.html
@@ -382,20 +382,28 @@
                            <table class="schedule1" id="table-saturday" style="overflow-y: hidden; overflow-x: hidden">
                               <tbody>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">6:00PM</td>
-                                    <td class="cell100 column2">Opening Ceremony</td>
+                                    <td class="cell100 column1">6:00 PM - 7:00 PM</td>
+                                    <td class="cell100 column2">Opening ceremony</td>
                                  </tr>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">7:00 PM</td>
-                                    <td class="cell100 column2">Hacking Begins</td>
+                                    <td class="cell100 column1">7:00 PM - 8:00 PM</td>
+                                    <td class="cell100 column2">Team formation and planning</td>
                                  </tr>
                                  <tr class="row100 body">
                                     <td class="cell100 column1">8:00 PM - 9:00 PM</td>
-                                    <td class="cell100 column2">Intro to Github</td>
+                                    <td class="cell100 column2">Intro to Github workshop</td>
                                  </tr>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">9:30 PM - 10:30 PM</td>
-                                    <td class="cell100 column2">Mini Event 1 - TBA</td>
+                                    <td class="cell100 column1">9:00 PM - 10:00 PM</td>
+                                    <td class="cell100 column2">Intro to HTML workshop</td>
+                                 </tr>
+				 <tr class="row100 body">
+                                    <td class="cell100 column1">10:00 PM - 11:00 PM</td>
+                                    <td class="cell100 column2">Intro to React Native workshop</td>
+                                 </tr>
+				 <tr class="row100 body">
+                                    <td class="cell100 column1">11:00 PM - 10:00 AM</td>
+                                    <td class="cell100 column2">Work time</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -408,8 +416,8 @@
                            <table>
                               <thead>
                                  <tr class="row100 head">
-                                    <th class="column1 header1">Time</th>
-                                    <th class="column2 header1">Event</th>
+                                    <th class="column1 header1" style="color: white">Time</th>
+                                    <th class="column2 header1" style="color: white">Event</th>
                                  </tr>
                               </thead>
                            </table>
@@ -419,19 +427,43 @@
                               <tbody>
                                  <tr class="row100 body">
                                     <td class="cell100 column1">10:00 AM - 11:00 AM</td>
-                                    <td class="cell100 column2">Mini Event 2 - TBA</td>
+                                    <td class="cell100 column2">EchoAR workshop</td>
                                  </tr>
                                  <tr class="row100 body">
+                                    <td class="cell100 column1">11:00 AM - 1:00 PM</td>
+                                    <td class="cell100 column2">Work time</td>
+                                 </tr>
+				 <tr class="row100 body">
+                                    <td class="cell100 column1">1:00 PM - 2:00 PM</td>
+                                    <td class="cell100 column2">IMC trading workshop</td>
+                                 </tr>
+				 <tr class="row100 body">
                                     <td class="cell100 column1">2:00 PM - 3:00 PM</td>
-                                    <td class="cell100 column2">Workshop 1 - TBA</td>
+                                    <td class="cell100 column2">Work time</td>
                                  </tr>
-                                 <tr class="row100 body">
-                                    <td class="cell100 column1">5:00 PM - 6:00 PM</td>
-                                    <td class="cell100 column2">Workshop 2 - TBA</td>
+				 <tr class="row100 body">
+                                    <td class="cell100 column1">3:00 PM - 4:00 PM</td>
+                                    <td class="cell100 column2">Intro to Cybersecurity</td>
                                  </tr>
-                                 <tr class="row100 body">
-                                    <td class="cell100 column1">8:00 PM - 9:00 PM</td>
-                                    <td class="cell100 column2">Fun Event 2 - TBA</td>
+				 <tr class="row100 body">
+                                    <td class="cell100 column1">4:00 PM - 7:00 PM</td>
+                                    <td class="cell100 column2">Mini CTF</td>
+                                 </tr>
+				 <tr class="row100 body">
+                                    <td class="cell100 column1">7:00 PM - 10:00 PM</td>
+                                    <td class="cell100 column2">Work time</td>
+                                 </tr>
+				 <tr class="row100 body">
+                                    <td class="cell100 column1">10:00 PM - 11:00 PM</td>
+                                    <td class="cell100 column2">Email Automation workshop (Free College gear!)</td>
+                                 </tr>
+				 <tr class="row100 body">
+                                    <td class="cell100 column1">11:00 PM - 12:00 PM</td>
+                                    <td class="cell100 column2">Midnight Shellshock</td>
+                                 </tr>
+				 <tr class="row100 body">
+                                    <td class="cell100 column1">12:00 AM - 9:00 AM</td>
+                                    <td class="cell100 column2">Work time</td>
                                  </tr>
                               </tbody>
                            </table>
@@ -444,8 +476,8 @@
                            <table>
                               <thead>
                                  <tr class="row100 head">
-                                    <th class="column1">Time</th>
-                                    <th class="column2">Event</th>
+                                    <th class="column1" style="color: white">Time</th>
+                                    <th class="column2" style="color: white">Event</th>
                                  </tr>
                               </thead>
                            </table>
@@ -454,16 +486,20 @@
                            <table class="schedule1" id="table-sunday" style="overflow-y: hidden; overflow-x: hidden">
                               <tbody>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">9:00 AM</td>
-                                    <td class="cell100 column2">Hacking Stops!</td>
+                                    <td class="cell100 column1">9:00 AM-10:00 AM</td>
+                                    <td class="cell100 column2">Finalize submissions and create videos</td>
                                  </tr>
                                  <tr class="row100 body">
                                     <td class="cell100 column1">10:00 - 10:30 AM</td>
-                                    <td class="cell100 column2">Finalize Submissions</td>
+                                    <td class="cell100 column2">Submit Projects</td>
                                  </tr>
                                  <tr class="row100 body">
+                                    <td class="cell100 column1">10:30 PM - 4:00 PM</td>
+                                    <td class="cell100 column2">Nap/relaxation time!</td>
+                                 </tr>
+				 <tr class="row100 body">
                                     <td class="cell100 column1">4:00 PM - 4:30 PM</td>
-                                    <td class="cell100 column2">Closing Ceremony</td>
+                                    <td class="cell100 column2">Closing Ceremony (Winners Announced!)</td>
                                  </tr>
                               </tbody>
                            </table>
