--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                            <table>
                               <thead>
                                  <tr class="row100 head">
-                                    <th class="column1 header1" style="color: white">Time</th>
+                                    <th class="column1 header1" style="color: white; font-style: bold">Time</th>
                                     <th class="column2 header1" style="color: white">Event</th>
                                  </tr>
                               </thead>
@@ -476,7 +476,7 @@
                            <table>
                               <thead>
                                  <tr class="row100 head">
-                                    <th class="column1" style="color: white">Time</th>
+                                    <th class="column1" style="color: white;font-style: bold">Time</th>
                                     <th class="column2" style="color: white">Event</th>
                                  </tr>
                               </thead>
