--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                            </table>
                         </div>
                         <div class="table100-body js-pscroll">
-                           <table class="schedule1" id="table-saturday" style="overflow-y: hidden; overflow-x: hidden">
+                           <table class="schedule1" id="table-saturday" style="overflow-y: hidden; overflow-x: visible">
                               <tbody>
                                  <tr class="row100 body">
                                     <td class="cell100 column1">6:00 PM - 7:00 PM</td>
