--- a/index.html
+++ b/index.html
@@ -521,7 +521,9 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 grid-flow-row gap-5">
                   <div class="border-2 p-5 " id = "box">
                       <h3 class="font-sans text-2xl" id = "boxtext">BEST OVERALL</h3>
-                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - TBA, 2nd - TBA, 3rd - TBA</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - $1200 value</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">2nd - $800 value</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">3rd - $400 value</p>
                   </div>
                   <div class="border-2 p-5 ">
                       <h3 class="font-sans text-2xl" id = "boxtext">HONORABLE MENTIONS</h3>
@@ -529,7 +531,9 @@
                   </div>
                   <div class="border-2 p-5 ">
                       <h3 class="font-sans text-2xl" id = "boxtext">BEST BEGINNER</h3>
-                      <p class="font-serif text-xl mb-5" id = "boxtext">TBA</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - $500 value</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">2nd - $200 value</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">3rd - $100 value</p>
                   </div>
                   <div class="border-2 p-5 ">
                       <h3 class="font-sans text-2xl" id = "boxtext">BEST ECHOAR</h3>
@@ -538,7 +542,9 @@
 
                   <div class="border-2 p-5 ">
                       <h3 class="font-sans text-2xl" id = "boxtext">BEST ILLINOIS TEAM</h3>
-                      <p class="font-serif text-xl mb-5" id = "boxtext">TBA</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - $500 value</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">Runner Up: $100 and 4 Abbott Robot kits + Sling Bags
+                     </p>
                   </div>
                   <div class="border-2 p-5 ">
                       <h3 class="font-sans text-2xl" id = "boxtext">FREE FOR EVERYONE</h3>
