--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                               <tbody>
                                  <tr class="row100 body">
                                     <td class="cell100 column1">10:00 AM - 11:00 AM</td>
-                                    <td class="cell100 column2">EchoAR workshop</td>
+                                    <td class="cell100 column2">IMC Trading workshop</td>
                                  </tr>
                                  <tr class="row100 body">
                                     <td class="cell100 column1">11:00 AM - 1:00 PM</td>
@@ -435,7 +435,7 @@
                                  </tr>
 				 <tr class="row100 body">
                                     <td class="cell100 column1">1:00 PM - 2:00 PM</td>
-                                    <td class="cell100 column2">IMC trading workshop</td>
+                                    <td class="cell100 column2">EchoAR workshop</td>
                                  </tr>
 				 <tr class="row100 body">
                                     <td class="cell100 column1">2:00 PM - 3:00 PM</td>
@@ -521,8 +521,8 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 grid-flow-row gap-5">
                   <div class="border-2 p-5 " id = "box">
                       <h3 class="font-sans text-2xl" id = "boxtext">BEST OVERALL</h3>
-                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - $1200 value</p>
-                      <p class="font-serif text-xl mb-5" id = "boxtext">2nd - $800 value</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - $1100 value</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">2nd - $700 value</p>
                       <p class="font-serif text-xl mb-5" id = "boxtext">3rd - $400 value</p>
                   </div>
                   <div class="border-2 p-5 ">
@@ -531,7 +531,7 @@
                   </div>
                   <div class="border-2 p-5 ">
                       <h3 class="font-sans text-2xl" id = "boxtext">BEST BEGINNER</h3>
-                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - $500 value</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - $400 value</p>
                       <p class="font-serif text-xl mb-5" id = "boxtext">2nd - $200 value</p>
                       <p class="font-serif text-xl mb-5" id = "boxtext">3rd - $100 value</p>
                   </div>
@@ -542,12 +542,13 @@
 
                   <div class="border-2 p-5 ">
                       <h3 class="font-sans text-2xl" id = "boxtext">BEST ILLINOIS TEAM</h3>
-                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - $500 value</p>
-                      <p class="font-serif text-xl mb-5" id = "boxtext">Runner Up: $100 and 4 Abbott Robot kits + Sling Bags
+                      <p class="font-serif text-xl mb-5" id = "boxtext">1st - $450 value</p>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">Runner Up: $150 and 4 Abbott Robot kits + Sling Bags
                      </p>
                   </div>
                   <div class="border-2 p-5 ">
                       <h3 class="font-sans text-2xl" id = "boxtext">FREE FOR EVERYONE</h3>
+                      <p class="font-serif text-xl mb-5" id = "boxtext">Free T-shirts and water bottles from IMC Trading for all hackers.</p>
                       <p class="font-serif text-xl mb-5" id = "boxtext">Free Business Tier access to EchoAR during the event.</p>
                       <p class="font-serif text-xl mb-5" id = "boxtext">Free 6 month repl.it Hacker Plan subscription.</p>
                       <p class="font-serif text-xl mb-5" id = "boxtext"> Access to Wolfram|One for thirty days. Wolfram|One includes both Desktop and Cloud access, full access to the Wolfram Language and Knowledgebase, FreeCDF Deployment, 5000 Wolfram|Alpha API calls, 5000 Cloud Credits, 2 installations per user and 2 GB of Cloud Storage.</p>
