--- a/index.html
+++ b/index.html
@@ -430,27 +430,23 @@
                                     <td class="cell100 column2">IMC Trading workshop</td>
                                  </tr>
                                  <tr class="row100 body">
-                                    <td class="cell100 column1">11:00 AM - 1:00 PM</td>
+                                    <td class="cell100 column1">11:00 PM - 3:00 PM</td>
                                     <td class="cell100 column2">Work time</td>
                                  </tr>
 				 <tr class="row100 body">
-                                    <td class="cell100 column1">1:00 PM - 2:00 PM</td>
+                                    <td class="cell100 column1">3:00 PM - 4:00 PM </td>
                                     <td class="cell100 column2">EchoAR workshop</td>
                                  </tr>
 				 <tr class="row100 body">
-                                    <td class="cell100 column1">2:00 PM - 3:00 PM</td>
-                                    <td class="cell100 column2">Work time</td>
+                                    <td class="cell100 column1">4:00 PM - 5:00 PM</td>
+                                    <td class="cell100 column2">Intro to Battlesnakes Workshop</td>
                                  </tr>
 				 <tr class="row100 body">
-                                    <td class="cell100 column1">3:00 PM - 4:00 PM</td>
-                                    <td class="cell100 column2">Intro to Cybersecurity</td>
+                                    <td class="cell100 column1">5:00 PM - 8:00 PM</td>
+                                    <td class="cell100 column2">Battlesnakes Mini Competition</td>
                                  </tr>
 				 <tr class="row100 body">
-                                    <td class="cell100 column1">4:00 PM - 7:00 PM</td>
-                                    <td class="cell100 column2">Mini CTF</td>
-                                 </tr>
-				 <tr class="row100 body">
-                                    <td class="cell100 column1">7:00 PM - 10:00 PM</td>
+                                    <td class="cell100 column1">8:00 PM - 10:00 PM</td>
                                     <td class="cell100 column2">Work time</td>
                                  </tr>
 				 <tr class="row100 body">
