--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <div class="text">
                 <h1 class="display-3"><img src="assets/img/HackVH%20logo.svg" style="width: 150px;margin-bottom:10px">HackVH</h1>
                 <p>The premier virtual high school hackathon based in the Chicagoland area.<br/>April 16th - 18th, 2021</p><button class="btn btn-outline-light btn-lg" type="button"
-                onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdpF_yqFlaCrPCvDkOzZkSbwc1gY4oGTm-p00Zim-s2jJ6flw/viewform?usp=sf_link','_blank')" >Register</button>
+                onclick="window.open('https://docs.google.com/presentation/d/1Pddc7ztM33rz9DvVyw1xiShO7WiOokQZVhZn_g9vWdc/edit','_blank')" >Congratulations to the winners!</button>
 
                 <script>
                   VANTA.WAVES({
